[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://mats/menu/settings/settings.tscn" type="PackedScene" id=2]
[ext_resource path="res://mats/menu/cell_choise_.tscn" type="PackedScene" id=3]

[node name="menu" type="Control"]
script = ExtResource( 1 )

[node name="slot" type="RichTextLabel" parent="."]
margin_right = 748.0
margin_bottom = 40.0
text = "sad"
scroll_active = false

[node name="buttons" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="cntn" type="Button" parent="buttons"]
margin_right = 77.0
margin_bottom = 20.0
text = "continue"

[node name="game" type="Button" parent="buttons"]
margin_right = 77.0
margin_bottom = 20.0
text = "game"

[node name="sett" type="Button" parent="buttons"]
margin_right = 63.0
margin_bottom = 20.0
text = "settings"

[node name="ex" type="Button" parent="buttons"]
margin_right = 36.0
margin_bottom = 20.0
text = "exit"

[node name="emenu" type="Panel" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="c" type="Button" parent="emenu"]
margin_right = 12.0
margin_bottom = 20.0

[node name="cws" type="Button" parent="emenu"]
margin_right = 12.0
margin_bottom = 20.0

[node name="ex" type="Button" parent="emenu"]
margin_right = 12.0
margin_bottom = 20.0

[node name="settings" parent="." instance=ExtResource( 2 )]
visible = false

[node name="cell_choise_" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="button_down" from="buttons/cntn" to="." method="_on_cntn_button_down"]
[connection signal="button_down" from="buttons/game" to="." method="_on_game_button_down"]
[connection signal="button_down" from="buttons/sett" to="." method="_on_sett_button_down"]
